tests/neg-custom-args/captures/cc-existential-conformance.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:8:24 --------------------
8 |  val y: A -> Fun[B^] = x // error
  |                        ^
  |                        Found:    (x : A -> (x²: A) -> B^{fresh})
  |                        Required: A -> A -> B^{any}
  |
  |                        Note that capability `any²` is not included in capture set {any}
  |                        because any² is not visible from any in value y.
  |
  |                        where:    any   is a root capability in the type of value y
  |                                  any²  is the root capability caps.any
  |                                  fresh is a root capability associated with the result type of (x²: A): B^{fresh}
  |                                  x     is a value in method test
  |                                  x²    is a reference to a value parameter
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:9:29 --------------------
9 |  val z: A -> (x: A) -> B^ = y // error
  |                             ^
  |                             Found:    A -> A -> B^{y*}
  |                             Required: A -> (x: A) -> B^
  |
  |                             Note that capability `y*` is not included in capture set {any}.
  |
  |                             where:    ^   refers to a root capability in the type of value z
  |                                       any is the root capability caps.any
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:13:19 -------------------
13 |  val y: Fun[B^] = x // error
   |                   ^
   |                   Found:    (x : (x²: A) -> B^{fresh})
   |                   Required: A -> B^{any}
   |
   |                   Note that capability `any²` is not included in capture set {any}
   |                   because any² is not visible from any in value y.
   |
   |                   where:    any   is a root capability in the type of value y
   |                             any²  is the root capability caps.any
   |                             fresh is a root capability associated with the result type of (x²: A): B^{fresh}
   |                             x     is a value in method test2
   |                             x²    is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:14:24 -------------------
14 |  val z: (x: A) -> B^ = y // error
   |                        ^
   |                        Found:    A -> B^{y*}
   |                        Required: (x: A) -> B^
   |
   |                        Note that capability `y*` is not included in capture set {any}.
   |
   |                        where:    ^   refers to a root capability in the type of value z
   |                                  any is the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
